--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -17,8 +17,8 @@ jobs:
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@2.0.0
         env:
-          FTP_SERVER: ${{ secrets.FTP_OVH_HOST }}
-          FTP_USERNAME: ${{ secrets.FTP_OVH_USERNAME }}
-          FTP_PASSWORD: ${{ secrets.FTP_OVH_PASSWORD }}
-          REMOTE_DIR: www
-          ARGS: --exclude=.ftpquota --exclude-glob=.git*/** --exclude-glob=.git** --exclude-glob=README*
+          FTP_SERVER: ${{ secrets.FTP_SERVER }}
+          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+          LOCAL_DIR: src
+          ARGS: --delete --exclude-glob=uploads/** --exclude=.ftpquota --exclude=index.php --exclude-glob=.git*/** --exclude-glob=.git** --exclude-glob=README*
