--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -20,12 +20,12 @@ jobs:
 
       - name: Ls
         run: ls -al
-      #
-      # - name: FTP-Deploy-Action
-      #   uses: SamKirkland/FTP-Deploy-Action@2.0.0
-      #   env:
-      #     FTP_SERVER: ${{ secrets.FTP_SERVER }}
-      #     FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-      #     FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-      #     LOCAL_DIR: src
-      #     ARGS: --delete --exclude-glob=uploads/** --exclude=.ftpquota --exclude=index.php --exclude-glob=.git*/** --exclude-glob=.git** --exclude-glob=README*
+
+      - name: FTP-Deploy-Action
+        uses: SamKirkland/FTP-Deploy-Action@2.0.0
+        env:
+          FTP_SERVER: ${{ secrets.FTP_SERVER }}
+          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+          LOCAL_DIR: release.zip
+          ARGS: --delete --exclude-glob=uploads/** --exclude=.ftpquota --exclude=index.php --exclude-glob=.git*/** --exclude-glob=.git** --exclude-glob=README*
